Fix textarea larger than page on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -232,6 +232,9 @@ html, body {
 textarea {
     font-size: 20px;
     font-family: sans-serif;
+    box-sizing: border-box;
+    max-width: 100%;
+    padding: 5px;
 }
 
 .tokendash {
